--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,25 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    flavorDimensions "default"
+    productFlavors{
+        basic{
+            applicationId "com.example.todoapplicationbasic"
+            versionCode 2
+            versionName "1.1"
+        }
+        advance{
+            applicationId "com.example.todoapplicationadvance"
+            versionCode 3
+            versionName "1.2"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
@@ -29,7 +44,6 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
